(fix) Fix header spilling into portfolio section by increasing padding

--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,8 @@ header {
   height: 100%;
 }
 header .container {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 150px;
 }
 header img {
   /*display: block;*/
@@ -556,88 +556,6 @@ fieldset[disabled] .btn-success.active {
  * Media queries for moving background
  */
 
-/* Wide */
-
-@media screen and (max-width: 1680px) {
-
-	/* Basic */
-
-		body, input, select, textarea {
-			font-size: 13pt;
-		}
-
-	/* BG */
-
-		@-moz-keyframes bg {
-			0% {
-				-moz-transform: translate3d(0,0,0);
-				-webkit-transform: translate3d(0,0,0);
-				-ms-transform: translate3d(0,0,0);
-				transform: translate3d(0,0,0);
-			}
-
-			100% {
-				-moz-transform: translate3d(-1500px,0,0);
-				-webkit-transform: translate3d(-1500px,0,0);
-				-ms-transform: translate3d(-1500px,0,0);
-				transform: translate3d(-1500px,0,0);
-			}
-
-}
-
-	@-webkit-keyframes bg {
-		0% {
-			-moz-transform: translate3d(0,0,0);
-			-webkit-transform: translate3d(0,0,0);
-			-ms-transform: translate3d(0,0,0);
-			transform: translate3d(0,0,0);
-		}
-
-		100% {
-			-moz-transform: translate3d(-1500px,0,0);
-			-webkit-transform: translate3d(-1500px,0,0);
-			-ms-transform: translate3d(-1500px,0,0);
-			transform: translate3d(-1500px,0,0);
-		}
-		}
-
-	@-ms-keyframes bg {
-		0% {
-			-moz-transform: translate3d(0,0,0);
-			-webkit-transform: translate3d(0,0,0);
-			-ms-transform: translate3d(0,0,0);
-			transform: translate3d(0,0,0);
-		}
-
-		100% {
-			-moz-transform: translate3d(-1500px,0,0);
-			-webkit-transform: translate3d(-1500px,0,0);
-			-ms-transform: translate3d(-1500px,0,0);
-			transform: translate3d(-1500px,0,0);
-		}
-	}
-
-	@keyframes bg {
-		0% {
-			-moz-transform: translate3d(0,0,0);
-			-webkit-transform: translate3d(0,0,0);
-			-ms-transform: translate3d(0,0,0);
-			transform: translate3d(0,0,0);
-		}
-
-		100% {
-			-moz-transform: translate3d(-1500px,0,0);
-			-webkit-transform: translate3d(-1500px,0,0);
-			-ms-transform: translate3d(-1500px,0,0);
-			transform: translate3d(-1500px,0,0);
-		}
-	}
-
-	#bg {
-		background-size: 1500px auto;
-		width: 4500px;
-	}
-}
 
 /* Normal */
 /**
